[package]
name = "Toss_Invest_API_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
rand = "0.8"
md5 = "0.7"
uuid = {version = "1.17.0", features = ["v4"]}
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
flate2 = "1"